# ChangeLog for www-client/google-chrome
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.345 2013/11/21 22:07:00 floppym Exp $

*google-chrome-33.0.1712.4_alpha1 (21 Nov 2013)

  21 Nov 2013; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-33.0.1712.4_alpha1.ebuild,
  -google-chrome-33.0.1711.3_alpha1.ebuild:
  Automated update.

*google-chrome-33.0.1711.3_alpha1 (19 Nov 2013)
*google-chrome-32.0.1700.19_beta1 (19 Nov 2013)

  19 Nov 2013; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-32.0.1700.19_beta1.ebuild,
  +google-chrome-33.0.1711.3_alpha1.ebuild,
  -google-chrome-32.0.1700.14_beta1.ebuild,
  -google-chrome-33.0.1707.0_alpha1.ebuild:
  Automated update.

  16 Nov 2013; Mike Gilbert <floppym@gentoo.org>
  google-chrome-31.0.1650.57_p1.ebuild, google-chrome-32.0.1700.14_beta1.ebuild,
  google-chrome-33.0.1707.0_alpha1.ebuild:
  Fix sed in pkg_preinst, bug 491448.

*google-chrome-31.0.1650.57_p1 (15 Nov 2013)

  15 Nov 2013; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-31.0.1650.57_p1.ebuild, -google-chrome-31.0.1650.48_p1.ebuild:
  Automated update.

*google-chrome-32.0.1700.14_beta1 (14 Nov 2013)

  14 Nov 2013; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-32.0.1700.14_beta1.ebuild,
  -google-chrome-32.0.1700.6_beta1.ebuild:
  Bump.

  13 Nov 2013; Mike Gilbert <floppym@gentoo.org>
  google-chrome-33.0.1707.0_alpha1.ebuild:
  Tweak src_install.

*google-chrome-31.0.1650.48_p1 (12 Nov 2013)
*google-chrome-33.0.1707.0_alpha1 (12 Nov 2013)

  12 Nov 2013; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-31.0.1650.48_p1.ebuild,
  +google-chrome-33.0.1707.0_alpha1.ebuild,
  -google-chrome-30.0.1599.114_p1.ebuild,
  -google-chrome-32.0.1700.6_alpha1.ebuild:
  Bump.

*google-chrome-32.0.1700.6_beta1 (11 Nov 2013)

  11 Nov 2013; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-32.0.1700.6_beta1.ebuild,
  -google-chrome-31.0.1650.48_beta1.ebuild: