@@ -7,15 +7,15 @@ DIST google-chrome-stable_31.0.1650.57-1_amd64.deb 48660822 SHA256 0d16852b4d722
 DIST google-chrome-stable_31.0.1650.57-1_i386.deb 46273092 SHA256 49454f839db16f702bc0a10198ab630753efaba64a0163614e38476565e40b7a SHA512 d0c1eb18e9e20b40f26e35144f1c1dae31f105c1cd81c70e2a335b4df323ceef17ef125bfba5afa0a46e569880cc88b0d7147bc320b8e4329a04c057459af49d WHIRLPOOL dfb9dd9038b533084beb3a3ca18ad65f2f00b563b4d120c61267e7a2802b5d203745c215d844deb9852f7af3544230efd0d09ad6d8e85d869685b0c7f068305e
 DIST google-chrome-unstable_33.0.1712.4-1_amd64.deb 50007530 SHA256 44942febe10570ebad0d2efc8661d848e0be44ba398c52da38bdb4bb3740b87e SHA512 996f606d3d717032a0cf1eddbd5eb90e7d8ce25994f0b2df4e53785c2c6ab9bec4cf24173c1e051e510245517267a38576f733025a507b6c7ceae1b1820bab9c WHIRLPOOL 814a4e662b6c917da42175402afe5ec7f49ad83ff737ed3fe1626017a0107db8cafeaeb291c90d75b9b6afede2300149fc87585831d512bd2d38d7e81742b8f1
 DIST google-chrome-unstable_33.0.1712.4-1_i386.deb 47566366 SHA256 c1675d78e083cf33fd12afaba94d77f521c6bd64a529d98f4af800e73f345461 SHA512 d6a757b7bcf5db395edd9568857daba2baf14eddfcfa4344d459872f83e2baaa6a765b4924f85cbd0f3542b791f65fa992e0953b4cd5bbde8b16c7d6934ded6b WHIRLPOOL dce7514ecf008fad48d72abf533c812a58a7c615e7cdfae6a3307eef85676851b6c215f4698fbd23a5d307cc91a2ef65c29a87f653c8a2ca886f52bfb28aa8b9
-EBUILD google-chrome-31.0.1650.57_p1.ebuild 4443 SHA256 20b3292f71d62949b0b85c7042a3fb90570bf950fb00f50a1e548ef62d95d5c6 SHA512 f3acc642215b180789fab03ae19e49055223053824b20515f9c562fda79c265091aa931868be322c956f802e74395b4beffdbabbb38cbb1ae54554648741a80f WHIRLPOOL 5d876230ca7810f4b4080395a823955202557725f9278a22f46b0f5d8baadf0d198b1c1a746596bf776d1c07af7ee64844267032c61884487947627480c14df6
-EBUILD google-chrome-32.0.1700.19_beta1.ebuild 4446 SHA256 08411dc0417a729427adda023dc5e99165bd3d243db8fbceb95fff063eb16698 SHA512 e8db8f178d1b2eb59871b8af55116d6af5e073aec6249924a00aed7863e66a1f456630e9db009cf56e766a4059084488face04efeccf55716c9795a2be6e6333 WHIRLPOOL 6cc4cffef6b7aa336fa9df369b8d38a64b615deb748c5de3d7cfca67bcba597c7632e042c8d292726e63f9bc9c77764bf3ed4494ed0399b3d33b6e7f70d0f5f1
-EBUILD google-chrome-33.0.1712.4_alpha1.ebuild 4488 SHA256 10254ea0258405d01717c5ca70a1ad7d1eb68bc3931713982a56e5c9b86fa1f3 SHA512 c9291fa4f62adc2dad9b1ddf93788771768e2411d6d8a6807fe6d723650a4aa461dde6ab5edd72abbfb5937af51a5447574681a429c142a94fd39ab4a56d087b WHIRLPOOL 895ce701df38054fc8f88d6aa22d887933d365486d3e1a00c85d99a4ed406d404282c16b4c6a8b1439729efa3169cce4667e066f6be59adebf57ec730b95dbe2
-MISC ChangeLog 84209 SHA256 5fd957f654287aaeb2f78db11c7e45b3228677a69b334fd9e427352afccb4a35 SHA512 a78b54f1cdac9aa25d216faf7f0d3c454cead6aed35c778dcc8c64bd4bf283c244702c24983ca23782ea33d713b3bdb4f8a4f9082e5645cc426d0104432826cc WHIRLPOOL c9cf74174f0ca54ea026b1105b2c1c787ffe493ce04961705909eba64d76342faa8f4bdab0040b4c881a6bce56854c9c612879247cf73aee58b7c30a14f14a44
+EBUILD google-chrome-31.0.1650.57_p1.ebuild 4433 SHA256 7f67a012cb0870b5d03e155eb5c3b31f87b8c3d8d5b80876b3e992b0e38fb771 SHA512 097fa01d02428ddb4042b59da27606bbac83ce259ad83eb7a9e90b09685697ef75ad6286c41e1108fa7f8b91a07be96d2411b1c426a5e84ca538f1254c906d24 WHIRLPOOL a6945163b82c01195d53df08ecbd990800075578a780ccc2545760a88326874fa30cf76e9d1530b08a822ab8ce4bd8d23d7e1ec2808d4596b5d161046108499c
+EBUILD google-chrome-32.0.1700.19_beta1.ebuild 4436 SHA256 39ff4ec3af49d4092c2e42208ad3e2d9d9026ae51c2cc9657725019e5aad6a92 SHA512 b3c14da114f9be04d82ec7d8ec82317a9ca18a9e0c80468a9d4f21caf6f9b9463f72e3bf5a04b655e49e7ee0b1ad09acc4870da1fe37fd91c8ef78bf91e4baba WHIRLPOOL 42dee7fa300dcc7353fc779332d71d252ab17ad483cf2cda24c3085d77d52d87dd7aedecdd30c2c40fa2eb535301b5551c0c41b0d10361c4056f54dde2a95998
+EBUILD google-chrome-33.0.1712.4_alpha1.ebuild 4478 SHA256 269dc114a790f13bd28a503f218a494d7acc2ae36614bd0075012bf783a79e9b SHA512 2be6d86a7712cc83f9de5ae6d0d54457c9fb1c66707f1c724367cc3808a5828c48e454019f09e952993747a44588ae6e5f580d28447d996d8be51e1b06dab09d WHIRLPOOL 613740cef3c1b3d8ecc999013bc66f52ae6318515dba3fd3e5f91514767d1e9c1c2932d309ffee37fb65c2a9cd7f95b2311df8c56be316d4ad089a0f8f649cc9
+MISC ChangeLog 84435 SHA256 5f5ee9362886823f67cab0c262772017d2099472bcf7d93ce8bfd9ac9981ec16 SHA512 bf8aff77c542844ebcc0f4b9ae77e1a2e86348ffbb8c955f85d4afe66a0bd96ee1864553a5cebc9c53ff0a72927b848a7d5ad90fd6acb57f9c53024ad996c478 WHIRLPOOL 1f801c53b540ea576496ddbad845c2875f31c1cb5aa460d8745941f794faf7afd12137e8f42cb3494a64093fa8216ce6ef639f484cfd85a7650a244581d5ab3c
 MISC metadata.xml 600 SHA256 e3dffcb8db012d64e4dbb7df2566b800b2a9476aaf0447b1d40a6e94d2733806 SHA512 350bb629bee41ac320d1a870d3d7f34ead23edb1b7cf6ac6379363b01435015c58e249ba1375e9ed3b3023107ef5f3f29f646143a9e2622769923aa5fb21d846 WHIRLPOOL 05772be4e662813e5a0231e46d272931f0ccce9a13f7244ddda8a40e43e8d141293d0a70d4aa8b640ace773d3f68d663bd8cd4558f3bc3c65e5126834bf05129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlKOhAYACgkQC77qH+pIQ6ShIwD+N1gj0Z6ROadrCby+8jXGf3W2
-o7L+538NwXLJENrXcpIBAIUqpkjqXo2+Mvr2s5ZFS+g3K9K1LHhaRcFnrWNFxNRU
-=mxrW
+iF4EAREIAAYFAlKPmHkACgkQC77qH+pIQ6Q45wEAm12Z1eyAdUvWS9Srgyk1NOpl
+yZnay3vtAepsoINYqwIBAJBJ+PJNDZ+lIWznaQyfVBZxinVCiYpxNMweHKxTtvB0
+=1AXK
 -----END PGP SIGNATURE-----
