@@ -1,6 +1,11 @@
 # ChangeLog for www-client/google-chrome
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.345 2013/11/21 22:07:00 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.346 2013/11/22 17:46:30 floppym Exp $
+
+  22 Nov 2013; Mike Gilbert <floppym@gentoo.org>
+  google-chrome-31.0.1650.57_p1.ebuild, google-chrome-32.0.1700.19_beta1.ebuild,
+  google-chrome-33.0.1712.4_alpha1.ebuild:
+  Remove some whitespace to get repoman to shut up.
 
 *google-chrome-33.0.1712.4_alpha1 (21 Nov 2013)
 
